Repository And UnitOfWork

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyPortefolioDb": "Data Source= DESKTOP-BUSAOAU\\SQLEXPRESS; Initial Catalog = MyPortfolioDb; Integreated Security= true; MultipleActiveResultSets = true "
+    "MyPortefolioDb": "Data Source= DESKTOP-BUSAOAU\\SQLEXPRESS; Initial Catalog = MyPortfolioDb; Integrated Security= true; MultipleActiveResultSets = true ;TrustServerCertificate= true"
   },
   "Logging": {
     "LogLevel": {
